--- a/.dvc/config
+++ b/.dvc/config
@@ -1,2 +1,5 @@
+[core]
+    remote = storage
 ['remote "storage"']
     url = gdrive://1D_aLj89_P2bCJetc_xfCXTX2vjfsqGs4
+    gdrive_acknowledge_abuse = true
